// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfigUtil > Should always include ModSync.Updater.exe in syncPaths 1`] = `
[
  {
    "enabled": true,
    "enforced": true,
    "name": "[Required] ModSync Updater",
    "path": "ModSync.Updater.exe",
    "restartRequired": false,
    "silent": true,
  },
  {
    "enabled": true,
    "enforced": true,
    "name": "[Required] ModSync Plugin",
    "path": "BepInEx/plugins/Corter-ModSync.dll",
    "restartRequired": true,
    "silent": true,
  },
]
`;

exports[`ConfigUtil > should load config 1`] = `
[
  {
    "enabled": true,
    "enforced": true,
    "name": "[Required] ModSync Updater",
    "path": "ModSync.Updater.exe",
    "restartRequired": false,
    "silent": true,
  },
  {
    "enabled": true,
    "enforced": true,
    "name": "[Required] ModSync Plugin",
    "path": "BepInEx/plugins/Corter-ModSync.dll",
    "restartRequired": true,
    "silent": true,
  },
  {
    "enabled": true,
    "enforced": false,
    "name": "doesnotexist",
    "path": "doesnotexist",
    "restartRequired": true,
    "silent": false,
  },
  {
    "enabled": true,
    "enforced": false,
    "name": "plugins",
    "path": "plugins",
    "restartRequired": true,
    "silent": false,
  },
  {
    "enabled": false,
    "enforced": false,
    "name": "mods",
    "path": "mods",
    "restartRequired": true,
    "silent": false,
  },
]
`;

exports[`ConfigUtil > should reject absolute paths 1`] = `[Error: Corter-ModSync: SyncPaths must be relative to SPT server root. Invalid path '/etc/shadow']`;

exports[`ConfigUtil > should reject invalid JSON 1`] = `[Error: Corter-ModSync: config.jsonc 'syncPaths' is not an array. Please verify your config is correct and try again.]`;

exports[`ConfigUtil > should reject non-array syncPaths 1`] = `[Error: Corter-ModSync: config.jsonc 'syncPaths' is not an array. Please verify your config is correct and try again.]`;

exports[`ConfigUtil > should reject on non-array exclusions 1`] = `[Error: Corter-ModSync: config.jsonc 'exclusions' is not an array. Please verify your config is correct and try again.]`;

exports[`ConfigUtil > should reject on non-string syncPath name 1`] = `[Error: Corter-ModSync: config.jsonc 'syncPaths.name' must be a string. Please verify your config is correct and try again.]`;

exports[`ConfigUtil > should reject on syncPath name with invalid characters 1`] = `[JSONError: Bad control character in string literal in JSON at position 69 (line 3 column 48) while parsing '{					"syncPaths": [						{ "path": "p']`;

exports[`ConfigUtil > should reject paths outside of SPT root 1`] = `[Error: Corter-ModSync: SyncPaths must within SPT server root. Invalid path '../../etc/shadow']`;

exports[`ConfigUtil > should reject syncPath object without path 1`] = `[Error: Corter-ModSync: config.jsonc 'syncPaths' is missing 'path'. Please verify your config is correct and try again.]`;

exports[`ConfigUtil > should warn on explicitly excluded syncPaths 1`] = `[Error: Corter-ModSync: 'plugins' has been added as a sync path and is also in the 'exclusions' array. This probably isn't doing what you want. If you no longer want to sync this path, remove it from the 'exclusions' and 'syncPaths' arrays.]`;
